fixed: position iphone btn close chat list

--- a/src/styles/Main.css
+++ b/src/styles/Main.css
@@ -118,9 +118,6 @@ nav {
   nav {
     height: max(9svh, 55px);
   }
-  main {
-    height: min(95svh, 100svh - 55px);
-  }
   .nav-logo > p {
     font-size: calc(var(--font-size) * 1.3);
   }
